Fixed Locking with decorator Fixed Nofications with decorator Fixed Pass through of Tile Object